<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_dark"
    tools:context=".AddTask">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_placeholder_descibe"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/e_describe"
            style="@style/edit_style"
            android:layout_weight="0"
            android:autofillHints="@string/input_placeholder_descibe"
            android:gravity="top"
            android:hint="..."
            android:inputType="textMultiLine"
            tools:ignore="HardcodedText,InefficientWeight" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/shoose_time"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/e_time"
            style="@style/text_style_home"
            android:layout_marginEnd="5dp"
            android:autofillHints="@string/input_placeholder_time"
            android:hint="@string/input_placeholder_time" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/darker_gray" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/shoose_Date"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/e_date"
            style="@style/text_style_home"
            android:layout_marginStart="5dp"
            android:autofillHints="@string/input_placeholder_date"
            android:hint="@string/input_placeholder_date" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:layout_marginStart="5dp"
            android:background="@android:color/darker_gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/btnCancel"
                android:textColor="@color/white"
                app:backgroundTint="@color/btn_dark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="6dp"
                android:layout_weight="1"
                android:text="@string/btnDelete"
                android:textColor="@color/white"
                app:backgroundTint="@color/btn_dark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btnEdit"
                android:textColor="@color/white"
                app:backgroundTint="@color/btn_dark" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnAddTask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_weight="1"
                android:text="@string/btn_add"
                android:textColor="@color/white"
                app:backgroundTint="@color/btn_dark" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>